--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="gallery.html">Image gallery</a></li>
+      <li><a href="gallery.html">Image gallery)</a></li>
       <li><a href="video.html">Video playback</a></li>
       <li><a href="feedback.html">Feedback form</a></li>
     </ul>
