--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 8</title>
     <!-- <link rel="stylesheet" href="css/common.css" /> -->
-  <link href="/goit-js-hw-08/index.8fab2.css" rel="stylesheet"></head>
+  <link href="index.8fab2.css" rel="stylesheet"></head>
   <body>
     <ul>
       <li><a href="gallery.html">Image gallery)</a></li>
       <li><a href="video.html">Video playback</a></li>
       <li><a href="feedback.html">Feedback form</a></li>
     </ul>
-  <script defer src="/goit-js-hw-08/index.04893.js"></script></body>
+  <script defer src="index.04893.js"></script></body>
 </html>
