--- a/feedback.html
+++ b/feedback.html
@@ -7,7 +7,7 @@
     <title>Feedback form</title>
     <!-- <link rel="stylesheet" href="css/common.css" /> -->
     <!-- <link rel="stylesheet" href="css/03-feedback.css" /> -->
-  <link href="/goit-js-hw-08/feedback.a7925.css" rel="stylesheet"></head>
+  <link href="feedback.a7925.css" rel="stylesheet"></head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
@@ -24,5 +24,5 @@
     </form>
 
     <!-- <script src="js/03-feedback.js" type="module"></script> -->
-  <script defer src="/goit-js-hw-08/feedback.04893.js"></script></body>
+  <script defer src="feedback.04893.js"></script></body>
 </html>
