--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <title>SimpleLightbox library</title>
     <!-- <link rel="stylesheet" href="css/common.css" /> -->
     <!-- <link rel="stylesheet" href="css/01-gallery.css" /> -->
-  <link href="/goit-js-hw-08/gallery.d5b7d.css" rel="stylesheet"></head>
+  <link href="gallery.d5b7d.css" rel="stylesheet"></head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
@@ -15,5 +15,5 @@
     <div class="gallery"></div>
 
     <!-- <script src="js/01-gallery.js" type="module"></script> -->
-  <script defer src="/goit-js-hw-08/gallery.04893.js"></script></body>
+  <script defer src="gallery.04893.js"></script></body>
 </html>
