--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
       <li><a href="video.html">Video playback</a></li>
       <li><a href="feedback.html">Feedback form</a></li>
     </ul>
-  <script defer src="index.04893.js"></script></body>
+  <script defer src="index.3d138.js"></script></body>
 </html>
