--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>SimpleLightbox library</title><link href="gallery.158a8.css" rel="stylesheet"></head><body><p><a href="index.html">Go back</a></p><div class="gallery"></div><script defer="defer" src="gallery.91ab9.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SimpleLightbox library</title>
+    <!-- <link rel="stylesheet" href="css/common.css" /> -->
+    <!-- <link rel="stylesheet" href="css/01-gallery.css" /> -->
+  <link href="gallery.d5b7d.css" rel="stylesheet"></head>
+  <body>
+    <p><a href="index.html">Go back</a></p>
+
+    <!-- Add gallery items to this list -->
+    <div class="gallery"></div>
+
+    <!-- <script src="js/01-gallery.js" type="module"></script> -->
+  <script defer src="gallery.3d138.js"></script></body>
+</html>
