--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Homework 8</title><link href="index.9255d.css" rel="stylesheet"></head><body><ul><li><a href="gallery.html">Image gallery)</a></li><li><a href="video.html">Video playback</a></li><li><a href="feedback.html">Feedback form</a></li></ul><script defer="defer" src="index.91ab9.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homework 8</title>
+    <!-- <link rel="stylesheet" href="css/common.css" /> -->
+  <link href="index.8fab2.css" rel="stylesheet"></head>
+  <body>
+    <ul>
+      <li><a href="gallery.html">Image gallery)</a></li>
+      <li><a href="video.html">Video playback</a></li>
+      <li><a href="feedback.html">Feedback form</a></li>
+    </ul>
+  <script defer src="index.3d138.js"></script></body>
+</html>
